--- a/index.html
+++ b/index.html
@@ -8,16 +8,9 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="./Develop/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -29,7 +22,70 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks go here https://www.w3schools.com/bootstrap4/bootstrap_ref_all_classes.asp-->
+      <div class="row timeblock" id="9">
+        <div class="col-1 hour">9 AM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="10">
+        <div class="col-1 hour">10 AM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="11">
+        <div class="col-1 hour">11 AM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="12">
+        <div class="col-1 hour">12 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="1">
+        <div class="col-1 hour">1 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="2">
+        <div class="col-1 hour">2 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="3">
+        <div class="col-1 hour">3 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="4">
+        <div class="col-1 hour">4 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
+      <div class="row timeblock" id="5">
+        <div class="col-1 hour">5 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 btn-save">
+          <span class="oi oi-lock-locked"></span>
+        </button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
