--- a/index.html
+++ b/index.html
@@ -22,67 +22,67 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here https://www.w3schools.com/bootstrap4/bootstrap_ref_all_classes.asp-->
-      <div class="row timeblock" id="9">
+      <!-- time-blocks go here https://www.w3schools.com/bootstrap4/bootstrap_ref_all_classes.asp-->
+      <div class="row time-block" id="9">
         <div class="col-1 hour">9 AM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="10">
+      <div class="row time-block" id="10">
         <div class="col-1 hour">10 AM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="11">
+      <div class="row time-block" id="11">
         <div class="col-1 hour">11 AM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="12">
+      <div class="row time-block" id="12">
         <div class="col-1 hour">12 PM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="1">
+      <div class="row time-block" id="1">
         <div class="col-1 hour">1 PM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="2">
+      <div class="row time-block" id="2">
         <div class="col-1 hour">2 PM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="3">
+      <div class="row time-block" id="3">
         <div class="col-1 hour">3 PM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="4">
+      <div class="row time-block" id="4">
         <div class="col-1 hour">4 PM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row timeblock" id="5">
+      <div class="row time-block" id="5">
         <div class="col-1 hour">5 PM</div>
         <textarea class="col-10 schedule"></textarea>
-        <button class="col-1 btn-save">
+        <button class="col-1 saveBtn">
           <span class="oi oi-lock-locked"></span>
         </button>
       </div>
